# ollivanders-in-a-docker-pau13-loop

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  api.py  app.py  config.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
DDD/: domain_model.drawio
DDD/UML_Diagram/: UML_Diagram_Project.drawio
controller/controller_mongo/: factory.py
docs/: bibliography.md  requirements.txt
docs/source/: conf.py  controller.controller_mongo.rst  modules.rst  repository.repository_mongo.mock_db.rst  repository.repository_sql.rst  service.rst  service.service_sql.rst  test.test_sql.test_repository.rst  test.test_sql.test_resources.rst
domain/: Conjured.py  FactoryDatabase.py  IUpdateable.py  Inventory.py  Sulfuras.py  aged_brie.py  backstagePasses.py  normal_item.py
repository/repository_mongo/: db_atlas.py  db_model.py  repo.py
repository/repository_mongo/mock_db/: db_mock_atlas.py
repository/repository_sql/: data_items.csv  db_connection.py  repo.py
repository/repository_sql/models/: items.py  users.py
resources/resources_mongo/: item.py  quality.py  sell_in.py  stock.py  update_quality.py  welcome.py
resources/resources_sql/: inventario.py  items.py  quality.py  sellin.py  updateQuality.py  wellcome.py
service/service_mongo/: service.py
service/service_sql/: service.py
static/css/: layout.css
static/js/: fetchs.js
templates/: dashboard.html  home.html  inventory.html  inventory_prueba.html  layout.html  login.html  register.html
test/test_domain/: test_aged_brie.py  test_backstagePasses.py  test_conjured.py  test_inventory.py  test_normal_item.py  test_sulfuras.py
test/test_mongo/: conftest.py  test_add_item.py  test_delete_item.py  test_item.py  test_quality.py  test_sell_in.py  test_stock.py  test_update_stock.py  test_welcome.py
test/test_sql/: conftest.py  test_hello_world.py
test/test_sql/test_repository/: test_add_item_db.py  test_delete_item_db.py  test_get_by_name.py  test_get_by_quality.py  test_get_by_sellin.py  test_get_items_db.py  test_update_quality_db.py
test/test_sql/test_resources/: test_add_item.py  test_delete_item.py  test_get_items.py  test_item.py  test_put_item.py  test_quality.py  test_sellin.py  test_update_quality.py
